Fixed small spacing bug in contact section

--- a/scss/layout/contact/_contact.scss
+++ b/scss/layout/contact/_contact.scss
@@ -5,7 +5,9 @@
 @use 'contact-form';
 
 .contact {
-    padding-inline: 13em;
+
+    @include mixins.desktop-styles() {padding-inline: 13em;}
+
     .contact__grid {
         display: grid;
         grid-template-columns: 1fr;
